# anim-rs

./: Cargo.toml  LICENSE  README.md  README_zh.md
.github/workflows/: test.yml
derive/: Cargo.toml  README.md
derive/src/: lib.rs
examples/: animated-splash.rs  color-example.rs  make-animative.rs  map-example.rs  size-example.rs  transitions.rs
src/: iced.rs  lib.rs
src/core/: animatable.rs  animator.rs  clock.rs  easing.rs  mod.rs  options.rs  timeline.rs  utils.rs
src/core/animation/: boxed.rs  cache.rs  chain.rs  delay.rs  key_frame.rs  map.rs  mod.rs  parallel.rs  primitive.rs  repeat.rs  scale.rs  seek.rs  skip.rs  step.rs  take.rs
src/iced/: mod.rs  trans.rs  transition.rs
src/iced/trans/: fly.rs  slide.rs
src/iced/transition/: fade.rs  fly.rs  slide.rs
src/local/: animator.rs  mod.rs  timeline.rs
src/trans/: fade.rs  fly.rs  mod.rs  slide.rs
