[package]
name = "anim"
version = "0.1.0"
description = "An animation library, works nicely with Iced and the others"
readme = "README.md"
license = "MIT"
edition = "2018"
homepage = "https://github.com/Joylei/plotters-iced"
repository = "https://github.com/Joylei/plotters-iced.git"
documentation = "https://docs.rs/crate/plotters-iced/"
keywords = ["animation", "iced"]
categories = ["visualization"]
authors = ["joylei <leingliu@gmail.com>"]

[features]
default = ["local", "iced-backend"]
local = ["parking_lot"]
iced-backend = ["iced_native"]

[dependencies]
impl-trait-for-tuples = "0.2.1"
dyn-clone = "1"
iced_native = { version="0.4", optional=true, default-features=false }
parking_lot = { version="0.11", optional=true }

[dev-dependencies]
iced = { version="0.3", features=["tokio", "canvas"] }
