[package]
name = "anim"
version = "0.1.4"
description = "A framework independent animation library for rust, works nicely with Iced and the others"
readme = "README.md"
license = "MIT"
edition = "2018"
homepage = "https://github.com/Joylei/anim-rs"
repository = "https://github.com/Joylei/anim-rs.git"
documentation = "https://docs.rs/crate/anim/"
keywords = ["animation", "iced"]
categories = ["visualization", "gui", "graphics"]
authors = ["joylei <leingliu@gmail.com>"]

[workspace]
members = [".", "derive"]

[features]
default = ["local", "iced-backend", "derive"]
local = ["parking_lot"]
iced-backend = ["iced_native"]
derive = ["anim-derive"]

[dependencies]
anim-derive = { path = "./derive", optional = true, version = "0.1" }
dyn-clone = "1"
iced_native = { version = "0.4", optional = true, default-features = false }
parking_lot = { version = "0.11", optional = true }

[dev-dependencies]
iced = { version = "0.3", features = ["tokio", "canvas"] }
